# orchestra

./: .gitignore  CHANGELOG.md  README.md  TODOS.md  electron.vite.config.ts  main.js  oxlintrc.json  package-lock.json  package.json  preload.js  tsconfig.node.tsbuildinfo  tsconfig.web.json  turbo.json
.claude/commands/desktop/: dev.md
.github/workflows/: ci.yml  release.yml
.orchestra/: workspace-settings.json
apps/backend/: package.json  tsconfig.json
apps/backend/convex/: crons.js  crons.ts  http.js  (+19 more)
apps/desktop/: .env  electron-builder.yml  electron.vite.config.js  electron.vite.config.ts  package.json  terminal-host.js  tsconfig.node.json  tsconfig.web.json
apps/desktop/voice-sidecar/: intent.py  main.py  pipeline.py  pyproject.toml  setup.sh
apps/desktop/voice-sidecar/tests/: test_intent.py  test_pipeline.py
apps/desktop/voice-sidecar/tests/fixtures/: README.md
apps/web/: package.json
docs/plans/: 2026-03-07-orchestra-design.md  2026-03-07-orchestra-implementation.md  2026-03-07-persistent-daemon-design.md  2026-03-07-persistent-daemon-implementation.md  2026-03-08-turborepo-monorepo.md  2026-03-09-idle-notification-design.md  2026-03-09-idle-notification.md  2026-04-09-claude-hooks-detection-design.md  2026-04-09-claude-hooks-detection-plan.md
src/daemon/: daemon.ts  headless-emulator.ts  protocol.ts  pty-subprocess.ts  session.ts
src/main/: daemon-client.ts  daemon-launcher.ts  history-manager.ts  index.ts  persistence.ts  process-monitor.ts  pty-manager.ts
src/preload/: index.ts
src/renderer/: index.html
src/shared/: types.ts
(+305 files in other folders)
